@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2011-08-31 14:54
+// This file was generated on 2011-09-29 16:17
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
@@ -12,6 +12,7 @@ return array(
 	'tx_icslibnavitia_call' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Call.php',
 	'tx_icslibnavitia_callvalue' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_CallValue.php',
 	'tx_icslibnavitia_city' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_City.php',
+	'tx_icslibnavitia_comment' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Comment.php',
 	'tx_icslibnavitia_coord' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Coord.php',
 	'tx_icslibnavitia_entrypoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPoint.php',
 	'tx_icslibnavitia_entrypointplanjourney' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPointPlanJourney.php',
