@@ -1,3 +1,8 @@
+2011-09-29 Pierrick Caillon <pierrick@in-cite.net>
+	* Added Comment node.
+	* Added comment attribut in Stop node. Note declared in XSDs.
+	* Added CommentList in APIService::getDepartireBoard* methods.
+
 2011-09-21 Pierrick Caillon <pierrick@in-cite.net>
 	* Added API calls for PTReferential.ModeTypeList and MakeBinaryCriteria. Only ModeType support for MakeBinaryCriteria.
 
